<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/question_boardsize_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:id="@+id/question_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question_boardsize_game"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/question_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/question_title"/>

                <Button
                    android:id="@+id/question_button_minus"
                    android:layout_width="@dimen/question_button_size"
                    android:layout_height="@dimen/question_button_size"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_background_primary"
                    android:text="-"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toTopOf="@+id/question_value"
                    app:layout_constraintBottom_toBottomOf="@+id/question_value"
                    app:layout_constraintEnd_toStartOf="@+id/question_value"
                    />

                <Button
                    android:id="@+id/question_button_plus"
                    android:layout_width="@dimen/question_button_size"
                    android:layout_height="@dimen/question_button_size"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/rounded_background_primary"
                    android:text="+"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toTopOf="@+id/question_value"
                    app:layout_constraintBottom_toBottomOf="@+id/question_value"
                    app:layout_constraintStart_toEndOf="@+id/question_value"
                    />

                <Button
                    android:id="@+id/question_button_go"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_background_primary"
                    android:text="@string/lets_go"
                    android:textAllCaps="false"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/question_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_primary"
        android:layout_margin="20dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_cell"
        app:layout_constraintVertical_bias="0.3"
        />

    <Button
        android:id="@+id/playboard_restart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background_primary"
        android:text="@string/restart"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/playboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/playboard_change_size"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background_accent"
        android:text="@string/change_size"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/playboard_restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/win_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/colorBackground">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:id="@+id/win_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/you_won"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_margin="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    android:id="@+id/win_start_again_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_background_primary"
                    android:text="@string/start_another"
                    android:textAllCaps="false"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/win_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>